tests/ui/reborrow/coerce-shared-lifetime-mismatch.stderr
error: implementing `CoerceShared` requires source and target to use the same reborrow lifetime argument
  --> $DIR/coerce-shared-lifetime-mismatch.rs:15:10
   |
LL | impl<'a> CoerceShared<StaticMarkerRef<'static>> for CustomMarker<'a> {}
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0597]: `a` does not live long enough
  --> $DIR/coerce-shared-lifetime-mismatch.rs:22:12
   |
LL |     let a = CustomMarker(PhantomData);
   |         - binding `a` declared here
LL |     method(a);
   |     -------^-
   |     |      |
   |     |      borrowed value does not live long enough
   |     argument requires that `a` is borrowed for `'static`
LL |
LL | }
   | - `a` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
